# alchemist

./: .gitignore  Cargo.toml  Dockerfile  README.md  alchemist.template  alchemist.toml  alchemist.toml.example  build.sh  debug.sh  prepare.sh  vars.sh
.semaphore/: semaphore.yml
doc/: lua_spec.md
doc/examples/escaping-values/: alchemist.toml
doc/examples/list-verbose/: alchemist.toml
scripts/: Dockerfile  build.sh  debug.sh  prepare.sh  vars.sh
src/: cli.rs  config.rs  config_test.rs  error.rs  main.rs  tasks.rs  tasks_test.rs
src/cli/: alchemist.template  interface.rs  interface_test.rs  terminal.rs
