[package]
name = "alchemist"
version = "0.3.5"
edition = "2021"
description = "Task runner and build tool written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
clap_complete = "4.2.0"
owo-colors = "4.0.0"
serde = { version = "1.0.144", features = ["derive"] }
terminal_size = "0.4.2"
toml = "0.7.4"

[features]

[dev-dependencies]
tempfile = "3.10.1"
