[package]
name = "alchemist"
version = "0.3.6"
edition = "2024"
description = "Task runner and build tool written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.48"
indexmap = { version = "2.9.0", features = ["serde"] }
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
terminal_size = "0.4.2"
toml = "0.8.22"
unicode-segmentation = "1.12.0"

[features]

[dev-dependencies]
tempfile = "3.19.1"
